--- a/v2/backend/package.json
+++ b/v2/backend/package.json
@@ -19,6 +19,9 @@
     "dotenv": "^17.2.3",
     "ethers": "^6.11.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "openai": "^6.17.0",
     "uuid": "^9.0.1"
